# cepro_fuel

./: .gitignore  README.md  pyproject.toml
_data/: encyclopedia.pickle  stations.pickle
cepro_fuel/: fuel_stations.py  test.py  utils.py
cepro_fuel_app/: cepro_fuel_app.py
cepro_fuel_app/notebooks/: notebook.ipynb
cepro_fuel_app/src/: utils.py
notebooks/: notebook.ipynb
streamlit_app/: Home.py  cepro_fuel_app.py
streamlit_app/pages/: 1_📘_Encyclopedia.py
