[tool.poetry]
name = "cepro_fuel"
version = "0.1.0"
description = ""
authors = ["TomasSmarda <tom.smarda@email.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
